# delete_old_branches_cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml  build.yml  release.yml
src/: errors.rs  handlers.rs  handlers_test.rs  main.rs  models.rs
