[package]
name = "delete_old_branches_cli"
version = "0.1.0"
authors = ["kattaris <kattaris@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
thiserror = "1.0.24"
crossterm = "0.19.0"
chrono = "0.4.19"
openssl = { version = "0.10", features = ["vendored"] }